src/server/microk8s/ingress-bongofn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    meta.helm.sh/release-name: bongofn
    meta.helm.sh/release-namespace: default
    nginx.org/client-max-body-size: 100m
  creationTimestamp: "2024-05-06T09:09:54Z"
  generation: 5
  labels:
    app.kubernetes.io/managed-by: Helm
  name: bongofn-ingress
  namespace: default
  resourceVersion: "23459800"
  uid: af5a78c2-84bf-4e4f-adc5-e7a6b3ec12e1
spec:
  ingressClassName: public
  rules:
  - host: bongofn.vestrong.eu
    http:
      paths:
      - backend:
          service:
            name: bongofn
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bongofn.vestrong.eu
    secretName: letsencrypt-prod
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
